--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-venv/ 
 # exclude venv
-__pycache__/*
+venv/
+
+# exclude pycache
+*__pycache__/*
+
+# exclude pyrightconfig.json 
+pyrightconfig.json
